# nauro

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.agents/skills/nauro/: SKILL.md
.agents/skills/nauro-adopt/: SKILL.md
.agents/skills/nauro-context/: SKILL.md
.agents/skills/nauro-handoff/: SKILL.md
.agents/skills/nauro-loop/: SKILL.md
.agents/skills/nauro-ship-task/: SKILL.md
.claude/agents/: executor.md  planner.md  reviewer.md
.claude/skills/nauro/: SKILL.md
.claude/skills/nauro-adopt/: SKILL.md
.claude/skills/nauro-context/: SKILL.md
.claude/skills/nauro-handoff/: SKILL.md
.claude/skills/nauro-loop/: SKILL.md
.claude/skills/nauro-ship-task/: SKILL.md
.cursor/rules/: nauro-adopt.mdc  nauro-context.mdc  nauro-handoff.mdc  nauro-loop.mdc  nauro-ship-task.mdc  nauro.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish-nauro-core.yml  publish-nauro.yml
benchmarks/: README.md  _stats.py  pool_certify.py  retrieval_bench.py
docs/: adopt-prompt.md  cloud-sync.md  releasing.md
docs/audits/: pitch-alignment-2026-04-30.md
scripts/: check_server_json_version.py  check_single_sourced.py
