[project]
name = "nauro-workspace"
version = "0.0.0"
description = "Nauro monorepo workspace (not published)"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nauro-core = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages/nauro/tests", "packages/nauro-core/tests"]
